[gd_scene load_steps=7 format=3 uid="uid://b0i77543v5a01"]

[ext_resource type="Script" path="res://Scripts/Weapons/rifle.gd" id="1_8vn0w"]
[ext_resource type="PackedScene" uid="uid://carwtwbycchat" path="res://Scenes/Models/rifle_3d.tscn" id="3_ghh4j"]
[ext_resource type="Texture2D" uid="uid://bc5ggv06olf5w" path="res://Sprites/muzzle_fire.png" id="4_nj24n"]

[sub_resource type="Animation" id="Animation_44h3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rifle-3d:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.055322, 0.185649)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rifle-3d:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.109956, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rifle-3d/muzzle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ixup"]
resource_name = "shoot"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rifle-3d:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.055322, 0.037516), Vector3(0, -0.055322, 0.185649), Vector3(0, -0.055, 0.038)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rifle-3d:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.105661, 0), Vector3(0.299182, -0.110593, -0.0327179), Vector3(0, -0.109956, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rifle-3d/muzzle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhx6u"]
_data = {
"RESET": SubResource("Animation_44h3y"),
"shoot": SubResource("Animation_8ixup")
}

[node name="Rifle" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00145085, 0)
script = ExtResource("1_8vn0w")

[node name="rifle_barrel" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.291308)
target_position = Vector3(0, 0, -1)

[node name="AnimationPlayerRifle" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bhx6u")
}

[node name="fire_rate" type="Timer" parent="."]
one_shot = true

[node name="rifle-3d" parent="." instance=ExtResource("3_ghh4j")]
transform = Transform3D(0.160058, 0, -0.0176706, 0, 0.161029, 0, 0.0176705, 0, 0.160058, 0, -0.055322, 0.185649)

[node name="muzzle" type="Sprite3D" parent="rifle-3d"]
transform = Transform3D(1, 0, 1.41561e-07, 0, 1, 0, -1.49012e-08, 0, 1, 0.00145813, 0.414139, -2.37135)
visible = false
billboard = 1
texture = ExtResource("4_nj24n")

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
